--- a/Numberator/Support/Base.lproj/LaunchScreen.storyboard
+++ b/Numberator/Support/Base.lproj/LaunchScreen.storyboard
@@ -21,7 +21,7 @@
                             </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
                         <constraints>
                             <constraint firstItem="3HS-kd-oce" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="6kP-za-UON"/>
                             <constraint firstItem="3HS-kd-oce" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="pAi-tf-d5f"/>
@@ -34,8 +34,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
